--- a/src/components/carousel/embla-carousel.css
+++ b/src/components/carousel/embla-carousel.css
@@ -1,7 +1,4 @@
 .embla__slide {
-  width: calc(100vw-32px);
-  transform: translate3d(0, 0, 0);
-  display: flex;
   flex-grow: 0;
   flex-shrink: 0;
   min-width: 0;
